--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "compile": "babel src/ -d build/ --config-file ./babel.config.js",
     "test": "run-s test:*",
     "test:eslint": "eslint --cache src tests",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage --watchAll=false || exit 0"
   },
   "keywords": [
     "webdriver",
