--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wdio-lambdatest-service",
-  "version": "1.0.13",
+  "version": "1.1.0",
   "description": "A WebdriverIO service that manages tunnel and job metadata for LambdaTest.",
   "author": "LambdaTest <keys@lambdatest.com>",
   "contributors": [
@@ -12,7 +12,8 @@
     "url": "git://github.com/LambdaTest/wdio-lambdatest-service.git"
   },
   "license": "MIT",
-  "main": "./build/index",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "engines": {
     "node": ">=10.0.0"
   },
@@ -20,6 +21,7 @@
     "build": "run-s clean compile",
     "clean": "rimraf ./build",
     "compile": "babel src/ -d build/ --config-file ./babel.config.js",
+    "postbuild": "cp src/*.d.ts build/",
     "test": "run-s test:*",
     "test:eslint": "eslint --cache src tests",
     "test:coverage": "jest --coverage --watchAll=false || exit 0"
