--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "source-map-support": "^0.5.16"
   },
   "peerDependencies": {
-    "@wdio/cli": "^7.0.0"
+    "@wdio/cli": "^7.0.0 || ^8.0.0"
   },
   "publishConfig": {
     "access": "public"
