--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@lambdatest/node-tunnel": "^4.0.1",
     "@wdio/logger": "^7.0.0",
     "colors": "^1.4.0",
+    "form-data": "^4.0.0",
     "source-map-support": "^0.5.21"
   },
   "peerDependencies": {
