--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@wdio/logger": "^7.0.0",
     "colors": "^1.4.0",
     "form-data": "^4.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "winston": "^3.2.1",
+    "axios": "^1.6.2"
   },
   "peerDependencies": {
     "@wdio/cli": "^7.0.0 || ^8.0.0",
