--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "axios": "^1.6.2"
   },
   "peerDependencies": {
-    "@wdio/cli": "^7.0.0 || ^8.0.0",
-    "@wdio/types": "^7.0.0 || ^8.0.0",
-    "webdriverio": "^7.0.0 || ^8.0.0"
+    "@wdio/cli": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@wdio/types": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "webdriverio": "^7.0.0 || ^8.0.0 || ^9.0.0"
   },
   "publishConfig": {
     "access": "public"
