--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
   "dependencies": {
     "@lambdatest/node-tunnel": "^4.0.1",
     "@wdio/logger": "^7.0.0",
+    "axios": "^1.6.2",
     "colors": "^1.4.0",
     "form-data": "^4.0.0",
     "source-map-support": "^0.5.21",
-    "winston": "^3.2.1",
-    "axios": "^1.6.2"
+    "winston": "^3.2.1"
   },
   "peerDependencies": {
     "@wdio/cli": "^7.0.0 || ^8.0.0 || ^9.0.0",
@@ -81,6 +81,7 @@
     "codecov": "^3.6.1",
     "copyfiles": "^2.1.1",
     "del": "^5.1.0",
+    "esbuild": "0.24.0",
     "eslint": "^6.5.1",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.0.7",
