--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
   "dependencies": {
     "@lambdatest/node-tunnel": "^4.0.1",
     "@wdio/logger": "^7.0.0",
+    "axios": "^1.6.2",
     "colors": "^1.4.0",
     "form-data": "^4.0.0",
     "source-map-support": "^0.5.21",
-    "winston": "^3.2.1",
-    "axios": "^1.6.2"
+    "winston": "^3.2.1"
   },
   "peerDependencies": {
     "@wdio/cli": "^7.0.0 || ^8.0.0 || ^9.0.0",
@@ -72,6 +72,7 @@
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
+    "@eslint/js": "^9.11.1",
     "@octokit/rest": "^16.35.2",
     "@vitest/coverage-c8": "^0.27.1",
     "@vitest/coverage-v8": "^0.34.4",
@@ -81,8 +82,10 @@
     "codecov": "^3.6.1",
     "copyfiles": "^2.1.1",
     "del": "^5.1.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.10.0",
     "husky": "^3.0.7",
     "mime-types": "^2.1.24",
     "npm-run-all": "^4.1.5",
