--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "clean:logs": "rimraf *.log",
     "clean:test-artifacts": "rimraf .lambdatest",
     "compile": "babel src/ -d build/ --config-file ./babel.config.js",
-    "lint:staged": "git diff-index --cached --name-only --diff-filter=d HEAD | grep -E \".*\\.[cm]?js$\" | xargs -r node_modules/eslint/bin/eslint.js",
+    "lint:staged": "cross-env git diff-index --cached --name-only --diff-filter=d HEAD | grep -E '.*\\.[cm]?js$' | xargs -r node_modules/eslint/bin/eslint.js",
     "prepare": "run-s build",
-    "postbuild": "cp src/*.d.ts build/",
+    "postbuild": "copy src\\*.d.ts build\\",
     "test": "run-s test:*",
     "test:eslint": "eslint --cache src",
-    "test:unit": "vitest --coverage"
+    "test:unit": "vitest --coverage",
+    "lint": "run-p lint:*",
+    "lint:es": "eslint src test --ext .js,.jsx,.ts,.tsx",
+    "lint:style": "prettier --check .",
+    "lint:types": "tsc --noEmit"
   },
   "keywords": [
     "webdriver",
@@ -72,8 +76,9 @@
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
-    "@eslint/js": "^9.11.1",
     "@octokit/rest": "^16.35.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-c8": "^0.27.1",
     "@vitest/coverage-v8": "^0.34.4",
     "babel-core": "^6.26.3",
@@ -81,14 +86,17 @@
     "babel-plugin-source-map-support": "^2.1.1",
     "codecov": "^3.6.1",
     "copyfiles": "^2.1.1",
+    "cross-env": "^7.0.3",
     "del": "^5.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
-    "globals": "^15.10.0",
     "husky": "^3.0.7",
     "mime-types": "^2.1.24",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.3",
     "recursive-readdir": "^2.2.2",
     "rimraf": "^3.0.0",
     "tempy": "^0.3.0",
