--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "del": "^5.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "esbuild": "0.24.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^3.0.7",
