--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "compile": "babel src/ -d build/ --config-file ./babel.config.js",
     "lint:staged": "cross-env git diff-index --cached --name-only --diff-filter=d HEAD | grep -E '.*\\.[cm]?js$' | xargs -r node_modules/eslint/bin/eslint.js",
     "prepare": "run-s build",
-    "postbuild": "copy src\\*.d.ts build\\",
+    "postbuild": "copyfiles \"src/*.d.ts\" build/",
     "test": "run-s test:*",
     "test:eslint": "eslint --cache src",
     "test:unit": "vitest --coverage",
@@ -86,12 +86,12 @@
     "babel-eslint": "^10.0.3",
     "babel-plugin-source-map-support": "^2.1.1",
     "codecov": "^3.6.1",
-    "copyfiles": "^2.1.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del": "^5.1.0",
+    "esbuild": "0.24.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "esbuild": "0.24.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.0.7",
     "mime-types": "^2.1.24",
