--- a/package.json
+++ b/package.json
@@ -88,12 +88,14 @@
     "codecov": "^3.6.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
+    "cross-env-shell": "^7.0.3",
     "del": "^5.1.0",
     "esbuild": "0.24.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.0.7",
+    "lint-staged": "^15.2.10",
     "mime-types": "^2.1.24",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
